<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="16097.2" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina3_5" orientation="portrait" appearance="light"/>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="16087"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MyApp" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="Xg1-My-99S">
                                <rect key="frame" x="0.0" y="40" width="320" height="198.5"/>
                                <subviews>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Multiply Numbers" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="i7E-fJ-KRC">
                                        <rect key="frame" x="92.5" y="0.0" width="135" height="20.5"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="First Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="ZsG-WZ-Aic">
                                        <rect key="frame" x="20" y="40.5" width="280" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="decimalPad"/>
                                    </textField>
                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Second Number" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eV9-ox-Isc">
                                        <rect key="frame" x="20" y="94.5" width="280" height="34"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" keyboardType="numberPad"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qS1-wh-nDl">
                                        <rect key="frame" x="20" y="148.5" width="280" height="30"/>
                                        <color key="backgroundColor" red="0.2627450980392157" green="0.5725490196078431" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
                                        <state key="normal" title="Calculate">
                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="calculateButton_TouchUpInside:" destination="BYZ-38-t0r" eventType="touchUpInside" id="e56-9p-6bo"/>
                                        </connections>
                                    </button>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QC9-Sh-1wr">
                                        <rect key="frame" x="160" y="198.5" width="0.0" height="0.0"/>
                                        <accessibility key="accessibilityConfiguration" identifier="resultLabel"/>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <nil key="textColor"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                                <constraints>
                                    <constraint firstAttribute="trailing" secondItem="eV9-ox-Isc" secondAttribute="trailing" constant="20" id="5ma-kv-TVU"/>
                                    <constraint firstAttribute="trailing" secondItem="qS1-wh-nDl" secondAttribute="trailing" constant="20" id="N2i-aa-wap"/>
                                    <constraint firstItem="eV9-ox-Isc" firstAttribute="leading" secondItem="Xg1-My-99S" secondAttribute="leading" constant="20" id="QYm-0x-Y2s"/>
                                    <constraint firstItem="ZsG-WZ-Aic" firstAttribute="leading" secondItem="Xg1-My-99S" secondAttribute="leading" constant="20" id="aut-M1-bVb"/>
                                    <constraint firstItem="qS1-wh-nDl" firstAttribute="leading" secondItem="Xg1-My-99S" secondAttribute="leading" constant="20" id="wZo-6w-3UA"/>
                                    <constraint firstAttribute="trailing" secondItem="ZsG-WZ-Aic" secondAttribute="trailing" constant="20" id="yQM-fd-0Iq"/>
                                </constraints>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                        <constraints>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Xg1-My-99S" secondAttribute="trailing" id="Jui-6Y-J5M"/>
                            <constraint firstItem="Xg1-My-99S" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Ph3-9w-Xr5"/>
                            <constraint firstItem="Xg1-My-99S" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="40" id="oar-gj-8jX"/>
                        </constraints>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                    </view>
                    <connections>
                        <outlet property="resultLabel" destination="QC9-Sh-1wr" id="63m-zh-whU"/>
                        <outlet property="tfFirstNumber" destination="ZsG-WZ-Aic" id="Ckl-KG-bIc"/>
                        <outlet property="tfSecondNumber" destination="eV9-ox-Isc" id="LRh-sb-4MW"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="136.875" y="137.5"/>
        </scene>
    </scenes>
</document>
